--- a/data/Ames_Mutagenicity/example_processing_and_templates.ipynb
+++ b/data/Ames_Mutagenicity/example_processing_and_templates.ipynb
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|████████████████████████████████████████| 344k/344k [00:00<00:00, 634kiB/s]\n",
+      "100%|████████████████████████████████████████| 344k/344k [00:00<00:00, 630kiB/s]\n",
       "Loading...\n",
       "Done!\n"
      ]
@@ -114,11 +114,11 @@
      "output_type": "stream",
      "text": [
       "total 364K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  2 06:08 data\r\n",
-      "-rw-rw-r-- 1 melo melo 308K مار  2 06:08 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  40K مار  1 22:53 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.7K مار  1 22:50 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.8K مار  1 22:50 transform.py\r\n"
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:49 data\r\n",
+      "-rw-rw-r-- 1 melo melo 308K مار  2 16:49 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  38K مار  2 16:49 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.9K مار  2 06:19 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.9K مار  2 06:18 transform.py\r\n"
      ]
     }
    ],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7e746003-cb1f-434f-bba6-00f0c439c4ac",
    "metadata": {
     "tags": []
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d544fa60-343e-40e1-bd0c-4750f07a7145",
    "metadata": {
     "tags": []
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d6d5efa5-b4b4-4a25-8626-e10f3d691e83",
    "metadata": {
     "tags": []
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "727f8d7b-cbb6-43c7-9eab-9d4d65be6b3f",
    "metadata": {
     "tags": []
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "63c8d4a4-906e-418d-be39-879365b4dfa0",
    "metadata": {
     "tags": []
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 308K مار  2 06:11 data_clean.csv\r\n"
+      "-rw-rw-r-- 1 melo melo 308K مار  2 16:49 data_clean.csv\r\n"
      ]
     }
    ],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "a51b9001-25d7-4e0e-a607-477cfc4a9f1c",
    "metadata": {
     "tags": []
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "1a512943-4909-4d56-867d-50c151d8d607",
    "metadata": {
     "tags": []
@@ -614,7 +614,7 @@
        "4      Drug 4                          [N-]=[N+]=C1C=NC(=O)NC1=O          1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "077b0c5f-8772-4879-9317-3fa28799689b",
    "metadata": {
     "tags": []
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
    "metadata": {
     "tags": []
@@ -657,8 +657,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "43619e7c-9c82-4ff0-ae25-403861304635",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>compound_id</th>\n",
+       "      <th>SMILES</th>\n",
+       "      <th>mutagenic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Drug 0</td>\n",
+       "      <td>O=[N+]([O-])c1ccc2ccc3ccc([N+](=O)[O-])c4c5ccc...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Drug 1</td>\n",
+       "      <td>O=[N+]([O-])c1c2c(c3ccc4cccc5ccc1c3c45)CCCC2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Drug 2</td>\n",
+       "      <td>O=c1c2ccccc2c(=O)c2c1ccc1c2[nH]c2c3c(=O)c4cccc...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Drug 3</td>\n",
+       "      <td>[N-]=[N+]=CC(=O)NCC(=O)NN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Drug 4</td>\n",
+       "      <td>[N-]=[N+]=C1C=NC(=O)NC1=O</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  compound_id                                             SMILES  mutagenic\n",
+       "0      Drug 0  O=[N+]([O-])c1ccc2ccc3ccc([N+](=O)[O-])c4c5ccc...          1\n",
+       "1      Drug 1       O=[N+]([O-])c1c2c(c3ccc4cccc5ccc1c3c45)CCCC2          1\n",
+       "2      Drug 2  O=c1c2ccccc2c(=O)c2c1ccc1c2[nH]c2c3c(=O)c4cccc...          0\n",
+       "3      Drug 3                          [N-]=[N+]=CC(=O)NCC(=O)NN          1\n",
+       "4      Drug 4                          [N-]=[N+]=C1C=NC(=O)NC1=O          1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f06e57c-02c5-493b-af65-c8bb9ac59421",
+   "metadata": {},
+   "source": [
+    "# meta YAML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "49771077-471d-4d71-a9a7-d6b094bbc4f3",
    "metadata": {
     "tags": []
    },
@@ -743,103 +838,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2f06e57c-02c5-493b-af65-c8bb9ac59421",
-   "metadata": {},
-   "source": [
-    "# meta YAML"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "49771077-471d-4d71-a9a7-d6b094bbc4f3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>compound_id</th>\n",
-       "      <th>SMILES</th>\n",
-       "      <th>mutagenic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Drug 0</td>\n",
-       "      <td>O=[N+]([O-])c1ccc2ccc3ccc([N+](=O)[O-])c4c5ccc...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Drug 1</td>\n",
-       "      <td>O=[N+]([O-])c1c2c(c3ccc4cccc5ccc1c3c45)CCCC2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Drug 2</td>\n",
-       "      <td>O=c1c2ccccc2c(=O)c2c1ccc1c2[nH]c2c3c(=O)c4cccc...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Drug 3</td>\n",
-       "      <td>[N-]=[N+]=CC(=O)NCC(=O)NN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Drug 4</td>\n",
-       "      <td>[N-]=[N+]=C1C=NC(=O)NC1=O</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  compound_id                                             SMILES  mutagenic\n",
-       "0      Drug 0  O=[N+]([O-])c1ccc2ccc3ccc([N+](=O)[O-])c4c5ccc...          1\n",
-       "1      Drug 1       O=[N+]([O-])c1c2c(c3ccc4cccc5ccc1c3c45)CCCC2          1\n",
-       "2      Drug 2  O=c1c2ccccc2c(=O)c2c1ccc1c2[nH]c2c3c(=O)c4cccc...          0\n",
-       "3      Drug 3                          [N-]=[N+]=CC(=O)NCC(=O)NN          1\n",
-       "4      Drug 4                          [N-]=[N+]=C1C=NC(=O)NC1=O          1"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -870,16 +870,6 @@
     "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "            \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "        },\n",
-    "        {\n",
-    "            \"id\": \"compound_id\",\n",
-    "            \"type\": \"Other\",\n",
-    "            \"description\": \"random drug id\",\n",
-    "            \"names\": [\n",
-    "                \"compound\",\n",
-    "                \"compound id\",\n",
-    "                \"random id\",\n",
-    "            ],\n",
-    "        },\n",
     "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
@@ -909,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "ec455cf0-962a-4c0d-bb3e-066e415ffd9b",
    "metadata": {
     "tags": []
@@ -933,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -945,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -958,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -968,7 +958,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 1.8K مار  2 06:18 meta.yaml\r\n"
+      "-rw-rw-r-- 1 melo melo 1.7K مار  2 16:49 meta.yaml\r\n"
      ]
     }
    ],
@@ -978,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1011,13 +1001,6 @@
       "- id: SMILES\r\n",
       "  type: SMILES\r\n",
       "  description: SMILES\r\n",
-      "- id: compound_id\r\n",
-      "  type: Other\r\n",
-      "  description: random drug id\r\n",
-      "  names:\r\n",
-      "  - compound\r\n",
-      "  - compound id\r\n",
-      "  - random id\r\n",
       "license: CC BY 4.0\r\n",
       "links:\r\n",
       "- url: https://doi.org/10.1021/ci300400a\r\n",
@@ -1055,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1067,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1152,16 +1135,6 @@
     "                \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "                \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "            },\n",
-    "            {\n",
-    "                \"id\": \"compound_id\",\n",
-    "                \"type\": \"Other\",\n",
-    "                \"description\": \"random drug id\",\n",
-    "                \"names\": [\n",
-    "                    \"compound\",\n",
-    "                    \"compound id\",\n",
-    "                    \"random id\",\n",
-    "                ],\n",
-    "            },\n",
     "        ],\n",
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
@@ -1213,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1223,8 +1196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading...\n",
-      "100%|████████████████████████████████████████| 344k/344k [00:00<00:00, 631kiB/s]\n",
+      "Found local copy...\n",
       "Loading...\n",
       "Done!\n",
       "Finished processing Ames_Mutagenicity dataset!\n"
@@ -1237,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 35,
    "id": "953e7bee-bd5e-41d0-a2be-506e0bc97727",
    "metadata": {
     "tags": []
@@ -1247,13 +1219,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 152K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  1 22:50 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
-      "-rw-rw-r-- 1 melo melo  47K مار  1 22:50 data_clean.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  47K مار  1 22:50 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  40K مار  1 22:26 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.7K مار  1 22:50 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.8K مار  1 22:50 transform.py\r\n"
+      "total 672K\r\n",
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:49 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
+      "-rw-rw-r-- 1 melo melo 308K مار  2 16:49 data_clean.csv\r\n",
+      "-rw-rw-r-- 1 melo melo 308K مار  2 16:49 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  38K مار  2 16:49 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.7K مار  2 16:49 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.6K مار  2 16:49 transform.py\r\n"
      ]
     }
    ],
