--- a/data/ClinTox/example_processing_and_templates.ipynb
+++ b/data/ClinTox/example_processing_and_templates.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "cf59e3e9-8061-4022-9eae-e978311b4155",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7bb8eb5e-f513-40d2-a68c-7cda1a51ad31",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b39a142e-ccbc-49d2-98b0-a5f9bde9fd27",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|████████████████████████████████████████| 110k/110k [00:00<00:00, 386kiB/s]\n",
+      "100%|████████████████████████████████████████| 110k/110k [00:00<00:00, 292kiB/s]\n",
       "Loading...\n",
       "Done!\n"
      ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "26d9f62a-07f5-4113-8161-d5dfcf0bfb71",
    "metadata": {
     "tags": []
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "43873fc3-20a8-487d-a7c5-33bd58414159",
    "metadata": {
     "tags": []
@@ -113,12 +113,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 164K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  2 07:44 data\r\n",
-      "-rw-rw-r-- 1 melo melo 102K مار  2 07:44 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  42K مار  2 07:11 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 2.4K مار  2 07:26 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 5.6K مار  2 07:26 transform.py\r\n"
+      "total 160K\r\n",
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:52 data\r\n",
+      "-rw-rw-r-- 1 melo melo 102K مار  2 16:52 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  37K مار  2 16:52 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.4K مار  2 07:55 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.5K مار  2 07:53 transform.py\r\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "77f614e7-b133-40bc-8759-2d930e4c120e",
    "metadata": {
     "tags": []
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "8f5a0387-f9e3-4e1a-8d14-5df618195f70",
    "metadata": {
     "tags": []
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "55b0bd63-62a0-469e-9d8a-e9ada3fe01c4",
    "metadata": {
     "scrolled": true,
@@ -249,7 +249,7 @@
        "4  Drug 4  [H]/[NH+]=C(\\N)c1ccc(OCCCCCOc2ccc(/C(N)=[NH+]/...  0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ec2458e5-455f-4f03-8ce9-c0d12e9ed371",
    "metadata": {
     "tags": []
@@ -281,7 +281,7 @@
        "['Drug_ID', 'Drug', 'Y']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "08197f62",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "a46dd8ff-37b3-4894-8226-3bf98226dd09",
    "metadata": {
     "tags": []
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "785d37cb-1fb4-4a91-a923-d5a78a37f36a",
    "metadata": {
     "tags": []
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "8b4cde30",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "1bf212cb-1653-457b-9f5d-416d4dd14b53",
    "metadata": {
     "tags": []
@@ -424,7 +424,7 @@
        "4                  0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "d544fa60-343e-40e1-bd0c-4750f07a7145",
    "metadata": {
     "tags": []
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "d6d5efa5-b4b4-4a25-8626-e10f3d691e83",
    "metadata": {
     "tags": []
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "727f8d7b-cbb6-43c7-9eab-9d4d65be6b3f",
    "metadata": {
     "tags": []
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "63c8d4a4-906e-418d-be39-879365b4dfa0",
    "metadata": {
     "tags": []
@@ -489,7 +489,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 102K مار  2 07:46 data_clean.csv\r\n"
+      "-rw-rw-r-- 1 melo melo 102K مار  2 16:52 data_clean.csv\r\n"
      ]
     }
    ],
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "a51b9001-25d7-4e0e-a607-477cfc4a9f1c",
    "metadata": {
     "tags": []
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "1a512943-4909-4d56-867d-50c151d8d607",
    "metadata": {
     "tags": []
@@ -606,7 +606,7 @@
        "4                  0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "077b0c5f-8772-4879-9317-3fa28799689b",
    "metadata": {
     "tags": []
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
    "metadata": {
     "tags": []
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "43619e7c-9c82-4ff0-ae25-403861304635",
    "metadata": {
     "tags": []
@@ -732,7 +732,7 @@
        "4                  0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "49771077-471d-4d71-a9a7-d6b094bbc4f3",
    "metadata": {
     "tags": []
@@ -834,7 +834,7 @@
        "4                  0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -874,16 +874,6 @@
     "            \"id\": \"SMILES\",  # column name\n",
     "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "            \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\": \"compound_id\",\n",
-    "            \"type\": \"Other\",\n",
-    "            \"description\": \"drug id\",\n",
-    "            \"names\": [\n",
-    "                \"compound\",\n",
-    "                \"compound id\",\n",
-    "                \"drug id\",\n",
-    "            ],\n",
     "        },\n",
     "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
@@ -914,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "ec455cf0-962a-4c0d-bb3e-066e415ffd9b",
    "metadata": {
     "tags": []
@@ -938,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -950,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -963,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -973,7 +963,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 1.4K مار  2 07:50 meta.yaml\r\n"
+      "-rw-rw-r-- 1 melo melo 1.3K مار  2 16:52 meta.yaml\r\n"
      ]
     }
    ],
@@ -983,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1010,13 +1000,6 @@
       "- id: SMILES\r\n",
       "  type: SMILES\r\n",
       "  description: SMILES\r\n",
-      "- id: compound_id\r\n",
-      "  type: Other\r\n",
-      "  description: drug id\r\n",
-      "  names:\r\n",
-      "  - compound\r\n",
-      "  - compound id\r\n",
-      "  - drug id\r\n",
       "license: CC BY 4.0\r\n",
       "links:\r\n",
       "- url: https://doi.org/10.1016/j.chembiol.2016.07.023\r\n",
@@ -1054,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1066,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1149,16 +1132,6 @@
     "                \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "                \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "            },\n",
-    "            {\n",
-    "                \"id\": \"compound_id\",\n",
-    "                \"type\": \"Other\",\n",
-    "                \"description\": \"drug id\",\n",
-    "                \"names\": [\n",
-    "                    \"compound\",\n",
-    "                    \"compound id\",\n",
-    "                    \"drug id\",\n",
-    "                ],\n",
-    "            },\n",
     "        ],\n",
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
@@ -1210,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1220,11 +1193,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading...\n",
-      "100%|████████████████████████████████████████| 110k/110k [00:00<00:00, 389kiB/s]\n",
-      "Loading...\n",
-      "Done!\n",
-      "Finished processing ClinTox dataset!\n"
+      "Found local copy...\r\n",
+      "Loading...\r\n",
+      "Done!\r\n",
+      "Finished processing ClinTox dataset!\r\n"
      ]
     }
    ],
@@ -1234,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "id": "953e7bee-bd5e-41d0-a2be-506e0bc97727",
    "metadata": {
     "tags": []
@@ -1245,12 +1217,12 @@
      "output_type": "stream",
      "text": [
       "total 264K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  2 07:44 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
-      "-rw-rw-r-- 1 melo melo 102K مار  2 07:53 data_clean.csv\r\n",
-      "-rw-rw-r-- 1 melo melo 102K مار  2 07:53 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  39K مار  2 07:52 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.4K مار  2 07:53 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.5K مار  2 07:53 transform.py\r\n"
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:52 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
+      "-rw-rw-r-- 1 melo melo 102K مار  2 16:52 data_clean.csv\r\n",
+      "-rw-rw-r-- 1 melo melo 102K مار  2 16:52 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  37K مار  2 16:52 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.3K مار  2 16:52 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.2K مار  2 16:52 transform.py\r\n"
      ]
     }
    ],
