--- a/data/hERG_Karim_et_al/example_processing_and_templates.ipynb
+++ b/data/hERG_Karim_et_al/example_processing_and_templates.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "cf59e3e9-8061-4022-9eae-e978311b4155",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "7bb8eb5e-f513-40d2-a68c-7cda1a51ad31",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "b39a142e-ccbc-49d2-98b0-a5f9bde9fd27",
    "metadata": {
     "scrolled": true,
@@ -79,7 +79,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found local copy...\n",
+      "Downloading...\n",
+      "100%|████████████████████████████████████████| 885k/885k [00:01<00:00, 766kiB/s]\n",
       "Loading...\n",
       "Done!\n"
      ]
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "26d9f62a-07f5-4113-8161-d5dfcf0bfb71",
    "metadata": {
     "tags": []
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "43873fc3-20a8-487d-a7c5-33bd58414159",
    "metadata": {
     "tags": []
@@ -114,11 +115,11 @@
      "output_type": "stream",
      "text": [
       "total 896K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  2 00:05 data\r\n",
-      "-rw-rw-r-- 1 melo melo 839K مار  2 05:52 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  39K مار  2 00:06 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.7K مار  1 22:50 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.8K مار  1 22:50 transform.py\r\n"
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:55 data\r\n",
+      "-rw-rw-r-- 1 melo melo 839K مار  2 16:55 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  38K مار  2 16:55 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.7K مار  2 06:06 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.8K مار  2 06:06 transform.py\r\n"
      ]
     }
    ],
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "77f614e7-b133-40bc-8759-2d930e4c120e",
    "metadata": {
     "tags": []
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "8f5a0387-f9e3-4e1a-8d14-5df618195f70",
    "metadata": {
     "tags": []
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "55b0bd63-62a0-469e-9d8a-e9ada3fe01c4",
    "metadata": {
     "scrolled": true,
@@ -249,7 +250,7 @@
        "4        4  O=C(NC1COc2cccc(-c3ccnc(CO)c3)c2C1)c1ccc(OCC(F...  0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "ec2458e5-455f-4f03-8ce9-c0d12e9ed371",
    "metadata": {
     "tags": []
@@ -281,7 +282,7 @@
        "['Drug_ID', 'Drug', 'Y']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "08197f62",
    "metadata": {},
    "outputs": [],
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "a46dd8ff-37b3-4894-8226-3bf98226dd09",
    "metadata": {
     "tags": []
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "785d37cb-1fb4-4a91-a923-d5a78a37f36a",
    "metadata": {
     "tags": []
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "8b4cde30",
    "metadata": {},
    "outputs": [],
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "1bf212cb-1653-457b-9f5d-416d4dd14b53",
    "metadata": {
     "tags": []
@@ -424,7 +425,7 @@
        "4             0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "d544fa60-343e-40e1-bd0c-4750f07a7145",
    "metadata": {
     "tags": []
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "d6d5efa5-b4b4-4a25-8626-e10f3d691e83",
    "metadata": {
     "tags": []
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "727f8d7b-cbb6-43c7-9eab-9d4d65be6b3f",
    "metadata": {
     "tags": []
@@ -487,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "63c8d4a4-906e-418d-be39-879365b4dfa0",
    "metadata": {
     "tags": []
@@ -497,7 +498,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 839K مار  2 05:54 data_clean.csv\r\n"
+      "-rw-rw-r-- 1 melo melo 839K مار  2 16:55 data_clean.csv\r\n"
      ]
     }
    ],
@@ -507,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "a51b9001-25d7-4e0e-a607-477cfc4a9f1c",
    "metadata": {
     "tags": []
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "1a512943-4909-4d56-867d-50c151d8d607",
    "metadata": {
     "tags": []
@@ -614,7 +615,7 @@
        "4             0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "077b0c5f-8772-4879-9317-3fa28799689b",
    "metadata": {
     "tags": []
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
    "metadata": {
     "tags": []
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "43619e7c-9c82-4ff0-ae25-403861304635",
    "metadata": {
     "tags": []
@@ -740,7 +741,7 @@
        "4             0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "49771077-471d-4d71-a9a7-d6b094bbc4f3",
    "metadata": {
     "tags": []
@@ -842,7 +843,7 @@
        "4             0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -885,16 +886,6 @@
     "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "            \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "        },\n",
-    "        {\n",
-    "            \"id\": \"compound_id\",\n",
-    "            \"type\": \"Other\",\n",
-    "            \"description\": \"random compound id\",\n",
-    "            \"names\": [\n",
-    "                \"compound\",\n",
-    "                \"compound id\",\n",
-    "                \"random compound id\"\n",
-    "            ],\n",
-    "        },\n",
     "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
@@ -923,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "ec455cf0-962a-4c0d-bb3e-066e415ffd9b",
    "metadata": {
     "tags": []
@@ -947,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -959,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -972,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -982,7 +973,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 1.6K مار  2 06:03 meta.yaml\r\n"
+      "-rw-rw-r-- 1 melo melo 1.5K مار  2 16:55 meta.yaml\r\n"
      ]
     }
    ],
@@ -992,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1023,13 +1014,6 @@
       "- id: SMILES\r\n",
       "  type: SMILES\r\n",
       "  description: SMILES\r\n",
-      "- id: compound_id\r\n",
-      "  type: Other\r\n",
-      "  description: random compound id\r\n",
-      "  names:\r\n",
-      "  - compound\r\n",
-      "  - compound id\r\n",
-      "  - random compound id\r\n",
       "license: CC BY 4.0\r\n",
       "links:\r\n",
       "- url: https://doi.org/10.1186/s13321-021-00541-z\r\n",
@@ -1066,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1078,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1165,16 +1149,6 @@
     "                \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "                \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "            },\n",
-    "            {\n",
-    "                \"id\": \"compound_id\",\n",
-    "                \"type\": \"Other\",\n",
-    "                \"description\": \"random compound id\",\n",
-    "                \"names\": [\n",
-    "                    \"compound\",\n",
-    "                    \"compound id\",\n",
-    "                    \"random compound id\"\n",
-    "                ],\n",
-    "            },\n",
     "        ],\n",
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
@@ -1225,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1235,8 +1209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading...\n",
-      "100%|███████████████████████████████████████| 885k/885k [00:00<00:00, 1.15MiB/s]\n",
+      "Found local copy...\n",
       "Loading...\n",
       "Done!\n",
       "Finished processing hERG_Karim_et_al dataset!\n"
@@ -1249,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "id": "953e7bee-bd5e-41d0-a2be-506e0bc97727",
    "metadata": {
     "tags": []
@@ -1260,12 +1233,12 @@
      "output_type": "stream",
      "text": [
       "total 1.7M\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  2 00:05 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
-      "-rw-rw-r-- 1 melo melo 839K مار  2 06:06 data_clean.csv\r\n",
-      "-rw-rw-r-- 1 melo melo 839K مار  2 06:06 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  38K مار  2 06:04 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.7K مار  2 06:06 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.8K مار  2 06:06 transform.py\r\n"
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:55 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
+      "-rw-rw-r-- 1 melo melo 839K مار  2 16:55 data_clean.csv\r\n",
+      "-rw-rw-r-- 1 melo melo 839K مار  2 16:55 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  38K مار  2 16:55 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.6K مار  2 16:55 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.5K مار  2 16:55 transform.py\r\n"
      ]
     }
    ],
